Export collada error Part 1 #64873

Closed
opened 2019-05-20 12:25:29 +02:00 by Kent Davis · 9 comments

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26

Blender Version
Broken: version: 2.80 (sub 70), branch: blender2.7, commit date: 2019-05-19 21:36, hash: b4dfae3df7
Worked: (optional)

Please do use Macintosh. Do not use Windows.
Export Collada and select SL / OpenSIM then export button cause crash Blender 2.80 (May 20, 2019)
Click Youtube: Crash Guide while export collada

File: Sphere and export collada 1.dae

Crash Guide long paragraph below
PDF: Blender crash guide while export collada.pdf

**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26 **Blender Version** Broken: version: 2.80 (sub 70), branch: blender2.7, commit date: 2019-05-19 21:36, hash: `b4dfae3df7` Worked: (optional) Please do use Macintosh. Do not use Windows. Export Collada and select SL / OpenSIM then export button cause crash Blender 2.80 (May 20, 2019) Click Youtube: [Crash Guide while export collada ](https://youtu.be/MvfcFl2N6aU) File: [Sphere and export collada 1.dae](https://archive.blender.org/developer/F7050385/Sphere_and_export_collada_1.dae) Crash Guide long paragraph below PDF: [Blender crash guide while export collada.pdf](https://archive.blender.org/developer/F7050382/Blender_crash_guide_while_export_collada.pdf)
Author

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis
Gaia Clary was assigned by Brecht Van Lommel 2019-05-21 08:57:10 +02:00
Member

The dae file is not very helpful here, so I tried with a fresh UV Sphere and i could not get Blender to crash. Please attach the blend file that breaks Blender when exporting.

You also can try a possible workaround: you could disable the option "Include Animations" in the Anim Tab of the Exporter Panel since Animations in Collada files are not supported at all by your target system (OpenSim, SL, etc.)

cheers,
Gaia

The dae file is not very helpful here, so I tried with a fresh UV Sphere and i could not get Blender to crash. Please attach the blend file that breaks Blender when exporting. You also can try a possible workaround: you could disable the option "Include Animations" in the Anim Tab of the Exporter Panel since Animations in Collada files are not supported at all by your target system (OpenSim, SL, etc.) cheers, Gaia
Author

I though .blend I confused. let me send right one without .dae. I was tired and do process myself yesterday and I was sleep hehe.

Please send to them within Macintosh too. Last download blender 2.80 of May 20, 2019

5 picture on Export Collada I just did popmenu SL/OSGrid to show you.
Screen Shot 2019-05-21 at 12.28.02 AM.png (SL+Open Sim Static)
.......................................................
Screen Shot 2019-05-21 at 12.24.31 AM.png

Screen Shot 2019-05-21 at 12.24.38 AM.png

Screen Shot 2019-05-21 at 12.24.45 AM.png

Screen Shot 2019-05-21 at 12.24.55 AM.png

Screen Shot 2019-05-21 at 12.25.02 AM.png

File on .blend: Sphere and export collada 1.blend
and other file: Sphere and export collada 2.blend

I though .blend I confused. let me send right one without .dae. I was tired and do process myself yesterday and I was sleep hehe. Please send to them within Macintosh too. Last download blender 2.80 of May 20, 2019 5 picture on Export Collada I just did popmenu SL/OSGrid to show you. ![Screen Shot 2019-05-21 at 12.28.02 AM.png](https://archive.blender.org/developer/F7055300/Screen_Shot_2019-05-21_at_12.28.02_AM.png) (SL+Open Sim Static) ....................................................... ![Screen Shot 2019-05-21 at 12.24.31 AM.png](https://archive.blender.org/developer/F7055266/Screen_Shot_2019-05-21_at_12.24.31_AM.png) ![Screen Shot 2019-05-21 at 12.24.38 AM.png](https://archive.blender.org/developer/F7055274/Screen_Shot_2019-05-21_at_12.24.38_AM.png) ![Screen Shot 2019-05-21 at 12.24.45 AM.png](https://archive.blender.org/developer/F7055277/Screen_Shot_2019-05-21_at_12.24.45_AM.png) ![Screen Shot 2019-05-21 at 12.24.55 AM.png](https://archive.blender.org/developer/F7055279/Screen_Shot_2019-05-21_at_12.24.55_AM.png) ![Screen Shot 2019-05-21 at 12.25.02 AM.png](https://archive.blender.org/developer/F7055282/Screen_Shot_2019-05-21_at_12.25.02_AM.png) File on .blend: [Sphere and export collada 1.blend](https://archive.blender.org/developer/F7055216/Sphere_and_export_collada_1.blend) and other file: [Sphere and export collada 2.blend](https://archive.blender.org/developer/F7055221/Sphere_and_export_collada_2.blend)

This issue was referenced by b471e48c30

This issue was referenced by b471e48c305b6fdee69a862b50547a59dd368c4d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

@Kent-Davis

Thanks for reporting this issue.

Actually i could not reproduce the problem, but i replaced the portion of the code that caused the crash, so now Blender hopefully reports what is wrong with the export instead of crashing.

Please can you test the next available daily build and see if the problem is fixed ?

cheers,
Gaia

@Kent-Davis Thanks for reporting this issue. Actually i could not reproduce the problem, but i replaced the portion of the code that caused the crash, so now Blender hopefully reports what is wrong with the export instead of crashing. Please can you test the next available daily build and see if the problem is fixed ? cheers, Gaia
Author

Yes I will do and send for you let you know come soon. I will get download tonight daily build after at 6 PM Pacific Time

Yes I will do and send for you let you know come soon. I will get download tonight daily build after at 6 PM Pacific Time
Author

Blender 2.80 May 20, 2019 (Pacific Time) CRASH
Blender 2.80 May 21, 2019 (Pacific Time) Not crash
Blender 2.80 May 22, 2019 (Pacific Time) CRASH
.........................................................................................
Blender 2.80 May 23, 2019 (Pacific Time) I am wait for download come soon

Blender 2.80 May 20, 2019 (Pacific Time) CRASH Blender 2.80 May 21, 2019 (Pacific Time) Not crash Blender 2.80 May 22, 2019 (Pacific Time) CRASH ......................................................................................... Blender 2.80 May 23, 2019 (Pacific Time) I am wait for download come soon
Author

Last download Blender 2.80 May 23, 2019 (Pacific Time) Not crash. YAAAAA a a a a ay

Export Collada should not make export without select.
See Youtube explain.
• If without select object can tell alert warning, without save to finder.
• If within select object can write save to finder.

https://youtu.be/b8_zAsZj3Os

Last download Blender 2.80 May 23, 2019 (Pacific Time) Not crash. YAAAAA a a a a ay Export Collada should not make export without select. See Youtube explain. • If without select object can tell alert warning, without save to finder. • If within select object can write save to finder. https://youtu.be/b8_zAsZj3Os
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#64873
No description provided.