fix T64873 collada export crashes Blender on Mac